// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dev/i18n/extractors/pug extracts messages from pug template with interpolation 1`] = `
Array [
  "message-id",
  Object {
    "description": "Message description",
    "message": "Default message",
  },
]
`;

exports[`dev/i18n/extractors/pug extracts messages from pug template without interpolation 1`] = `
Array [
  "message-id",
  Object {
    "description": "Message description",
    "message": "Default message",
  },
]
`;

exports[`dev/i18n/extractors/pug throws on empty id 1`] = `
Array [
  Array [
    [Error: Empty "id" value in i18n() or i18n.translate() is not allowed.],
  ],
]
`;

exports[`dev/i18n/extractors/pug throws on missing default message 1`] = `
Array [
  Array [
    [Error: Empty defaultMessage in i18n() or i18n.translate() is not allowed ("message-id").],
  ],
]
`;
